--- a/documentation/ocp4devex/src/main/asciidoc/intro.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/intro.asciidoc
@@ -31,3 +31,4 @@ managed by Kubernetes on a foundation of Red Hat Enterprise Linux.
 * https://www.openshift.com/learn/what-is-openshift[https://www.openshift.com/learn/what-is-openshift]
 * https://en.wikipedia.org/wiki/OpenShift[https://en.wikipedia.org/wiki/OpenShift]
 * https://www.openshift.com/products/container-platform[https://www.openshift.com/products/container-platform]
+* {webConsoleUrl}[{webConsoleUrl}] (the Web Console URL for the Workshop)
