--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -4,5 +4,6 @@
 include::intro.asciidoc[]
 include::topic-applicationbasics.asciidoc[]
 include::healthprobes.asciidoc[]
+include::camelk.asciidoc[]
 
 
