--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -2,7 +2,7 @@
 {author} <{email}>
 
 include::intro.asciidoc[]
-include::topic-applicationbasics.asciidoc[]
+include::applicationbasics.asciidoc[]
 include::healthprobes.asciidoc[]
 include::camelk.asciidoc[]
 
