--- a/documentation/ocp4devex/src/main/asciidoc/applicationbasics.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/applicationbasics.asciidoc
@@ -1,6 +1,10 @@
-[[Application Basics]]
-
 == Application Concepts
+
+=== Introduction
+
+This chapter will introduce the attendee to the mechanics of creating and manipulating Applications using OpenShift Container Platform. It will introduce the two distinct contexts of the User Interface, the Adminstrator and Developer views, and guide the attendee through creating some Applications.
+
+TIP: The attendee will be using a browser for interacting with both the OpenShift Container Platform UI and the provided terminal (for command line exercises). It is suggested the attendee uses Chrome or Firefox.
 
 === Starting up - logging on and creating a project
 
