--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -3,6 +3,7 @@
 
 include::intro.asciidoc[]
 include::applicationbasics.asciidoc[]
+include::deployments.asciidoc[]
 include::healthprobes.asciidoc[]
 include::camelk.asciidoc[]
 
