Completed all the basic chapters.

--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -5,6 +5,8 @@ include::intro.asciidoc[]
 include::applicationbasics.asciidoc[]
 include::deployments.asciidoc[]
 include::sdn.asciidoc[]
+include::rbac.asciidoc[]
+include::pvs.asciidoc[]
 include::healthprobes.asciidoc[]
 include::camelk.asciidoc[]
 
