Adding content for deployment strategies

--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -4,6 +4,7 @@
 include::intro.asciidoc[]
 include::applicationbasics.asciidoc[]
 include::deployments.asciidoc[]
+include::deploymentstrategies.asciidoc[]
 include::sdn.asciidoc[]
 include::rbac.asciidoc[]
 include::pvs.asciidoc[]
