added Camel K and Knative eventing first draft

--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -10,5 +10,6 @@ include::rbac.asciidoc[]
 include::pvs.asciidoc[]
 include::healthprobes.asciidoc[]
 include::camelk.asciidoc[]
+include::camelkocpserverless.asciidoc[]
 
 
