Changed the title of the deployment strategies section

--- a/documentation/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
@@ -1,4 +1,4 @@
-== Deployments Configurations and DevOps Approaches
+== Application Deployment Configurations and DevOps Approaches
 
 === Introduction
 
