Tidy up Tekton chapter and added chapter on ODO

--- a/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -9,6 +9,7 @@ include::sdn.asciidoc[]
 include::rbac.asciidoc[]
 include::pvs.asciidoc[]
 include::healthprobes.asciidoc[]
+include::openshift-do-command-line.asciidoc[]
 include::openshift-pipelines-tekton.asciidoc[]
 include::camelk.asciidoc[]
 include::camelkocpserverless.asciidoc[]
